@@ -58,6 +58,9 @@ footer {
 }
 
 .omp-recipe {
+    small {
+        color: @fontcolour-subtle;
+    }
     h3 {
         margin-top: 20px;
         margin-bottom: 5px;
