@@ -1,2 +1,5 @@
+	* Featured recipe images now link to the full size version
+	* When the recipe was published has been added
+
 0.1.0 - 2013-01-13
     * Initial Release
